[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# futures = "0.3"
# rocket = "0.4.10"
# mongodb = "2.2"
# bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
# tokio = "1"
# chrono = "0.4" # Used for setting DateTimes
# serde = "1" # Used in the Map Data into Structs section
# dotenv = "0.15.0" # Used for loading environment variables

# //other code section goes here

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 